# waymo-tools

./: .gitignore  README.md  convert_waymo.py  pyproject.toml  tfrecord_download.py  tfrecord_validate.py
lidar_process/: beta_transform_to_world.py  estimate_normals.py  transform_to_world.py  utils.py
torch_waymo/: __init__.py
torch_waymo/dataset/: __init__.py  simplified_frame.py  waymo_dataset.py
torch_waymo/protocol/: dataset_proto.py  label_proto.py  segmentation_proto.py
torch_waymo/scripts/: kankan_convdata_pkl.py  kankan_metadata_pkl.py  kankan_semantic_pkl.py  show_waymo.py
